opam-version: "2.0"
maintainer:   "kakadu.hafanana@gmail.com"
authors:      "kakadu.hafanana@gmail.com"
homepage:     "http://kakadu.github.io/lablqt/"
bug-reports:  "https://github.com/kakadu/lablqml/issues"
dev-repo: "git+https://github.com/Kakadu/lablqml.git"
tags: [ "gui" "ui" "qt" ]

# TODO: hack build-env field https://opam.ocaml.org/doc/Manual.html#opamfield-build-env
build: [
  ["sh" "-exc" "PATH=/usr/lib64/qt5/bin:/usr/lib/qt5/bin:$PATH ./configure"] { os-distribution = "alpine" | os-distribution = "centos" | os-distribution = "fedora" }
  ["sh" "-exc" "PATH=/usr/lib64/qt5/bin:/usr/lib/qt5/bin:$PATH dune build -p lablqml" ] { os-distribution = "alpine" | os-distribution = "centos" | os-distribution = "fedora" }
  ["sh" "-exc" "PATH=/usr/lib64/qt5/bin:/usr/lib/qt5/bin:$PATH make demos" ] { (os-distribution = "alpine"  | os-distribution = "centos" | os-distribution = "fedora") & with-test }
  
  ["./configure"]            { os-distribution != "alpine" & os-distribution != "centos" & os-distribution != "fedora" }
  ["dune" "build" "-p" name "-j" jobs]
                             { os-distribution != "alpine" & os-distribution != "centos" & os-distribution != "fedora" }
  [make "demos"] { with-test & os-distribution != "alpine" & os-distribution != "centos" & os-distribution != "fedora" } 
]
remove: [make "uninstall"]
flags: [ light-uninstall ]
depends: [
  "ocaml" {>= "4.03.0"}
  "ocamlfind" {build}
  "dune" { build }
  "configurator" {build & < "v0.13"}
  "conf-qt" {>= "5.2.1"}
  "ppxlib"  
  "conf-pkg-config" {build}
]
synopsis:
  "OCamlfind package and PPX extension to interface OCaml and QtQuick"
description: "Versions <= 0.4 are known as `lablqt`, >0.5 -- as `lablqml`."
url {
  src: "https://github.com/Kakadu/lablqml/archive/0.6.1.tar.gz"
  checksum: "md5=78d82c02437eb2dcd4ebf2c60bf3946f"
}
