(executable
 (name discover)
 (libraries base stdio dune-configurator))

(rule
 (targets
  QT_INSTALL_HEADERS.sexp
  I_QT_INSTALL_HEADERS.sexp
  QT_VERSION.sexp
  qml_foreign_types.sexp
  moc.sexp
  rcc.sexp
  qmltyperegistrar.sexp
  c_flags.sexp
  ocaml_qt_libs.sexp
  c_library_flags.sexp)
 (deps %{project_root}/config/discover.exe)
 (action
  (run %{project_root}/config/discover.exe)))
