(copy_files ui/Root.qml)

(library
  (name            mystubs)
  (modules )
  (cxx_names       controller_c moc_controller_c qrc_resources)
  (install_c_headers controller)
  (cxx_flags       ( (:include c_flags.sexp) -O3 -fPIC ))
  (flags ())   ; :standart enables a few warnings that I will fix later
)


(executable
  (name        program)
  (libraries   lablqml threads mystubs)
  (modules     Program Controller)
  (flags (-w -33-27) )
  (preprocess (per_module
               ((action (run ppx_qt %{input-file})) Controller)) )

  (link_flags  (-ccopt -Wl,-no-as-needed
		-fPIC
                -cclib -lstdc++ -cclib -llablqml_stubs
                ; By some reason resources are not linked/loaded when places in mystubs
                dune_test/qrc_resources.o
                (:include ocaml_qt_libs.sexp) ) )
)

(rule
 (targets moc_controller_c.cpp)
 (deps    controller.h)
 (action  (run moc %{deps} -o %{targets})) )

(rule
 (targets qrc_resources.cpp)
 (deps    src/resources.qrc ui/Root.qml)
 ; it will be great to have hack to access head of the dependecies (like in Makefile)
 (action  (run rcc -name resources src/resources.qrc -o %{targets})) )

(rule
 (targets  c_flags.sexp
           ocaml_qt_libs.sexp
           c_library_flags.sexp)
 (deps    config/discover.exe)
 (action  (run config/discover.exe )) )
