(library
 (name ppx_qt_rewriter)
 (modules gencpp ppx_qt ppxQtCfg generation2)
 (public_name lablqml.ppx)
 (libraries unix base stdio ppxlib ppxlib.metaquot myparser)
 (kind ppx_rewriter)
 (preprocess
  (pps
   ppxlib.metaquot
   ppx_deriving.show
   ppx_string_interpolation
   ppx_inline_test))
 (flags
  (:standard -warn-error -A -w -9-3)))
